--- a/src/styles/bio.css
+++ b/src/styles/bio.css
@@ -1,6 +1,8 @@
 html, body{
   margin: 0;
   height: 100%;
+  width: 100%;;
+  padding: 0;
 }
 
 #root{
@@ -8,180 +10,267 @@ html, body{
   height: 100%;
   display: block;
   font-family: Helvetica, Arial, sans-serif;
-  margin: 0 ;
-  background-color: rgb(240 246 196);
+  margin: 0;
+  padding: 0;
+  background-color: rgb(255, 255, 255);
   padding-bottom: 0;
-  color: rgb(65 65 66);
 }
 
-@media(max-width: 375px){
-
-  #image{
-    display: block;
-    max-width: 150px;
-    justify-content: center;
-    align-items:center;
-    margin: auto;
-  }
-
-  .main-content-div {
-    justify-content: center;
-    height: fit-content;
-    font-size: 0.6rem;
-    min-height: 300px;
-    max-width: 75%;
-    margin-right: 0;
-    z-index: 0;
-  }
-
-  .p-for-about-me {
-    display: block;
-    font-size: 1rem;
-    font-weight: 500;
-    margin: 0;
-    min-height: 300px;
-    margin: auto;
-    margin-top: 0;
-    z-index: 0;
-    width: 100%;
-    align-content: center;
-  }
-
-  #bio {
-    display: block;
-    justify-content: center;
-    background: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
-    max-width: 75%;
-    min-height: 100%;
-    margin-bottom: 0;
-    font-family: Helvetica, Arial, sans-serif;
-    min-height: fit-content;
-    padding-bottom: 20px;
-  }
-}  
-
-@media(min-width: 375px){
-
-  #image{
-    display: block;
-    max-width: 250px;
-    justify-content: center;
-    align-items:center;
-    margin: auto;
-  }
-
-  .main-content-div {
-    justify-content: center;
-    height: fit-content;
-    font-size: 0.6rem;
-    min-height: 300px;
-    max-width: 75%;
-    margin-right: 0;
-    z-index: 0;
-  }
-
-  .p-for-about-me {
-    display: block;
-    font-size: 1rem;
-    font-weight: 500;
-    margin: 0;
-    min-height: 300px;
-    margin: auto;
-    z-index: 0;
-    width: 100%;
-    align-content: center;
-  }
-
-  #bio {
-    display: block;
-    justify-content: center;
-    background: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
-    max-width: 75%;
-    min-height: 100%;
-    margin-bottom: 0;
-    font-family: Helvetica, Arial, sans-serif;
-    min-height: fit-content;
-    padding-bottom: 20px;
-  }
-}
-  
-
-@media(max-width: 972px){
-  .container{
-    justify-content: center;
-    width: 75%;
-  }
-
-  #image {
-    display: block;
-    max-height: 200px;
-    max-width: auto;
-    float: right;
-    margin-right: 1rem;
-    margin-top: 20px;
-    z-index: 1;
-  }
-  
-  .p-for-about-me {
-     font-size: 1.3rem;
-     font-weight: 500;
-     margin-bottom: 0;
-     margin-left: 1rem;
-     padding-top: 1rem;
-     min-height: 300px;
-     max-width: 75%;
-     z-index: 0;
-  }
-
-  #bio {
-    background: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
-    max-width: 75%;
-    min-height: 100%;
-    margin-bottom: 0;
-    font-family: Helvetica, Arial, sans-serif;
-    min-height: fit-content;
-    padding-bottom: 20px;
-  }
-    
+.container{
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
 }
 
+.col-3{
+  z-index: 0;
+  display: block;
+  flex-wrap: wrap;
+  display: block;
+  align-items: right;
+  justify-items: right;
 
-
-@media(min-width: 972px){
-  .container{
-    justify-content: center;
-    width: 75%;
-  }
-
-  #image {
-    display: block;
-    max-height: 200px;
-    max-width: auto;
-    float: right;
-    margin-right: 100px;
-    margin-left: -100px;
-    z-index: 1;
-  }
-  
-  .p-for-about-me {
-     font-size: 1.5rem;
-     font-weight: 500;
-     margin-bottom: 0;
-     min-height: 300px;
-     max-width: 75%;
-     margin-left: 100px;
-     z-index: 0;
-  }
-
-  #bio {
-    background: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
-    max-width: 75%;
-    min-height: 100%;
-    margin-bottom: 0;
-    font-family: Helvetica, Arial, sans-serif;
-    min-height: fit-content;
-    padding-bottom: 20px;
-  }
-    
 }
 
+tr .align-me {
+  display: flex;
+  align-items: center;
+}
+
+.d-flex {
+  align-content: center;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 0;
+  padding:0;
+}
+
+.zindex{
+  z-index: 1;
+  vertical-align: middle;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-content: center;
+  justify-content: left;
+}
+
+.sidebar{
+  position: fixed;
+  max-width: fit-content;
+  padding-left: 2%;
+  z-index: 1;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  font-family: 'Oswald' sans-serif;
+}
+
+#style{
+  text-decoration: none;
+  color: black;
+  font-family: 'Oswald' sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.b-nav-item{
+  font-family: 'Oswald', sans-serif;
+  margin-left: 1%;
+}
+
+.sticky{
+  justify-content: center;
+  display: block;
+  flex-wrap: nowrap;
+  position: sticky;
+}
+
+#maryia{
+  color: rgb(148 105 87);
+  font-family: 'MuseoModerno' serif;
+  font-weight: bold;
+  font-size: 6vw;
+  text-shadow: -1px -1px 2px grey;
+  text-align: right;
+
+}
+
+#hello{
+  color: rgb(0, 0, 0);
+  font-family: 'MuseoModerno' serif;
+  font-weight: bold;
+  font-size: 4vw;
+  text-shadow: -1px -1px 2px grey;
+  text-align: right;
+
+}
+
+#hello-sm{
+  color: rgb(0, 0, 0);
+  font-family: 'MuseoModerno' serif;
+  font-weight: bold;
+  font-size: 2.5vw;
+  text-shadow: -1px -1px 2px grey;
+  text-align: right;
+
+}
+
+#small-bl-tx{
+  color: black;
+  font-family: 'Futura';
+  font-weight: lighter;
+}
+
+.block{
+  justify-content: baseline;
+  display: block;
+  text-align: right;
+}
+
+#text-center{
+  justify-content: center;
+  z-index: 1;
+  align-items: center;
+  position: relative;
+  right: -2rem;
+  display: flex;
+
+}
+
+.text-center{
+  display:inline-flex;
+  justify-content:first baseline;
+  align-items: center;
+  text-align: right;
+  flex-direction: row;
+  min-width: fit-content;
+
+}
+
+.p-for-about-me {
+  text-shadow: -1px -1px 2px grey;
+  font-family: 'MuseoModerno', serif;
+  align-items: flex-end;
+  white-space: nowrap;
+  justify-items: center;
+  display: block;
+
+}
+
+#right{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: baseline;
+  align-items: flex-end;
+}
+
+#stick-text{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#vertical{
+  display: flex;
+  justify-content: flex-end;
+
+}
+
+#about{
+  font-size: 3.5vw;
+  align-items: center;
+  text-align: right;
+
+}
+
+#skills{
+  background-color: rgb(255 234 224);
+  font-size: xx-large;
+  align-items: center;
+  text-align: right;
+}
+
+#work{
+  font-size: 4vw;
+  align-items: center;
+  text-align: right;
+}
+
+#education{
+  font-size: 4vw;
+  align-items: center;
+  text-align: right;
+}
+
+.col-7{
+  text-align: left;
+}
+
+.col-1{
+  border-right: 10px;
+  border-color: black;
+  justify-content: center;
+  align-items: flex-end;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col-10{
+  display: flex;
+  flex-wrap: wrap;
+  max-width: fit-content;
+}
+
+.col-9{
+  width: 100%;
+  justify-content: flex-end;
+}
+
+#image{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: right;
+  align-items:center;
+  width: 100%;
+  height: auto;
+  z-index: 0;
+  margin: 0;
+  padding: 0;
+
+}
+
+#bio{
+  font-size: 2vw;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: lighter;
+  padding-right: 0.5rem;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+
+}
+
+#grey{
+  color: grey;
+  position: relative;
+  left: -1rem;
+
+}
+
+#border{
+  border-left: 5px black;
+}
+
+.vr{
+  display: flex;
+  flex-wrap: nowrap;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
